[package]
name = "net-sniffer"
version = "0.1.0"
authors = ["luweiba <320501900@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27.2"
actix-web = "3.3.2"
env_logger = "0.8.3"
futures = "0.3.15"
json = "0.12.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
